new version: 1. use bytes array to replace sam read original str 2. use repartitionAndSortWithinPartition to ignore sort after shuffle